--- a/filterAbleCard/package.json
+++ b/filterAbleCard/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.7.22"
   }
 }
