--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build":"parcel build ./src/index.html"
+    "build": "parcel build ./src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "parcel": "^2.9.3",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hosseinpi1380/justPractice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hosseinpi1380/justPractice/issues"
+  },
+  "homepage": "https://github.com/hosseinpi1380/justPractice#readme",
+  "description": ""
 }
